# KDFs

./: .travis.yml  .typos.toml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ansi-x963-kdf.yml  bake-kdf.yml  concat-kdf.yml  hkdf.yml  kbkdf.yml  one-step-kdf.yml  publish.yml  sp800-108.yml  workspace.yml
ansi-x963-kdf/: CHANGELOG.md  Cargo.toml  README.md
ansi-x963-kdf/src/: lib.rs
ansi-x963-kdf/tests/: tests.rs
bake-kdf/: CHANGELOG.md  Cargo.toml  README.md
bake-kdf/benches/: benchmark.rs
bake-kdf/src/: lib.rs
bake-kdf/tests/: tests.rs
benches/: hkdf.rs
concat-kdf/: Cargo.toml  LICENSE-MIT  README.md
concat-kdf/benches/: benchmark.rs
concat-kdf/src/: lib.rs
concat-kdf/tests/: tests.rs
examples/: main.rs
hkdf/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
hkdf/benches/: hkdf.rs  mod.rs
hkdf/examples/: extract.rs  from_prk.rs  main.rs
hkdf/src/: errors.rs  hkdf.rs  hmac_impl.rs  lib.rs  sealed.rs
hkdf/tests/: rfc5869.rs  tests.rs  wycheproof.rs
hkdf/tests/data/: rfc5869_sha1.blb  rfc5869_sha256.blb  wycheproof_sha1.blb  wycheproof_sha256.blb  wycheproof_sha384.blb  wycheproof_sha512.blb
kbkdf/: CHANGELOG.md  Cargo.toml  README.md
kbkdf/src/: lib.rs  sealed.rs  tests.rs
kbkdf/tests/data/CounterMode/: KDFCTR_gen.rsp
kbkdf/tests/data/FeedbackModeNOzeroiv/: KDFFeedback_gen.rsp
kbkdf/tests/data/FeedbackModenocounter/: KDFFeedback_gen.rsp
kbkdf/tests/data/FeedbackModewzeroiv/: KDFFeedback_gen.rsp
kbkdf/tests/data/PipelineModeWOCounterr/: KDFDblPipeline_gen.rsp
kbkdf/tests/data/PipelineModewithCounter/: KDFDblPipeline_gen.rsp
kbkdf/tests/kbkdf/: counter_mode.rs  feedback_mode_iv.rs  macros.rs  main.rs  parser.rs
one-step-kdf/: CHANGELOG.md  Cargo.toml  README.md
one-step-kdf/src/: lib.rs
one-step-kdf/tests/: tests.rs
sp800-108/: Cargo.toml  README.md
sp800-108/src/: lib.rs
sp800-108/tests/: cavp_tests.rs  spot_tests.rs  tests.rs
sp800-108/tests/data/: cmac_aes128.blb  cmac_aes192.blb  cmac_aes256.blb  ctr_cmac_aes128.blb  ctr_cmac_aes192.blb  ctr_cmac_aes256.blb  ctr_hmac_sha1.blb  ctr_hmac_sha224.blb  ctr_hmac_sha256.blb  ctr_hmac_sha384.blb  ctr_hmac_sha512.blb  feedback_cmac_aes128.blb  feedback_cmac_aes192.blb  feedback_cmac_aes256.blb  feedback_ctr_cmac_aes128.blb  feedback_ctr_cmac_aes192.blb  feedback_ctr_cmac_aes256.blb  feedback_ctr_hmac_sha1.blb  feedback_ctr_hmac_sha224.blb  feedback_ctr_hmac_sha256.blb  feedback_ctr_hmac_sha384.blb  feedback_ctr_hmac_sha512.blb  feedback_hmac_sha1.blb  feedback_hmac_sha224.blb  feedback_hmac_sha256.blb  feedback_hmac_sha384.blb  feedback_hmac_sha512.blb  hmac_sha1.blb  hmac_sha224.blb  hmac_sha256.blb  hmac_sha384.blb  hmac_sha512.blb
src/: hkdf.rs
