[workspace]
resolver = "2"
members = [
    "bake-kdf",
    "hkdf",
    "concat-kdf",
    "ansi-x963-kdf",
    "kbkdf",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# https://github.com/RustCrypto/utils/pull/1208
block-buffer = { git = "https://github.com/RustCrypto/utils" }
# https://github.com/RustCrypto/MACs/pull/206
cmac = { git = "https://github.com/RustCrypto/MACs" }
# https://github.com/RustCrypto/traits/pull/1976
crypto-common = { git = "https://github.com/RustCrypto/traits" }
# https://github.com/RustCrypto/utils/pull/1208
dbl = { git = "https://github.com/RustCrypto/utils" }
# https://github.com/RustCrypto/traits/pull/1976
digest = { git = "https://github.com/RustCrypto/traits" }
# https://github.com/RustCrypto/MACs/pull/206
hmac = { git = "https://github.com/RustCrypto/MACs" }
# https://github.com/RustCrypto/utils/pull/1208
inout = { git = "https://github.com/RustCrypto/utils" }
