[package]
name = "bake-kdf"
version = "0.0.1"
description = "bake-kdf function (STB 34.101.66-2014)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/bake-kdf"
repository = "https://github.com/RustCrypto/KDFs"
keywords = ["crypto", "bake", "stb", "kdf"]
categories = ["cryptography", "no-std"]

[dependencies]
belt-hash = { version = "0.2.0-rc.1", default-features = false }

[dev-dependencies]
hex-literal = "1"

[package.metadata.docs.rs]
all-features = true
