[package]
name = "concat-kdf"
version = "0.2.0-pre"
description = "Concatenation Key Derivation Function (Concat KDF)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/concat-kdf"
repository = "https://github.com/RustCrypto/KDFs"
keywords = ["crypto", "concat-kdf", "KDF", "NIST"]
categories = ["cryptography", "no-std"]
rust-version = "1.71"

[dependencies]
digest = "=0.11.0-pre.3"

[dev-dependencies]
hex-literal = "0.4"
sha2 = { version = "=0.11.0-pre.0", default-features = false }

[features]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
