[package]
name = "concat-kdf"
version = "0.2.0-pre"
description = "Concatenation Key Derivation Function (Concat KDF)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
documentation = "https://docs.rs/concat-kdf"
repository = "https://github.com/RustCrypto/KDFs"
keywords = ["crypto", "concat-kdf", "KDF", "NIST"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
digest = "0.11.0-rc.1"

[dev-dependencies]
hex-literal = "1"
sha2 = { version = "0.11.0-rc.2", default-features = false }
