[package]
name = "hkdf"
version = "0.13.0-rc.3"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustCrypto/KDFs/"
repository = "https://github.com/RustCrypto/KDFs/"
description = "HMAC-based Extract-and-Expand Key Derivation Function (HKDF)"
keywords = ["crypto", "HKDF", "KDF"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
hmac = "0.13.0-rc.4"

# optional dependencies
kdf = { version = "0.1.0-pre.1", optional = true }

[dev-dependencies]
blobby = "0.4"
hex-literal = "1"
sha1 = { version = "0.11.0-rc.4", default-features = false }
sha2 = { version = "0.11.0-rc.4", default-features = false }

[package.metadata.docs.rs]
all-features = true
