[package]
name = "kbkdf"
version = "0.1.0"
edition = "2018"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustCrypto/KDFs/"
repository = "https://github.com/RustCrypto/KDFs/"
description = "Key Derivation Using Pseudorandom Function (KBKDF)"
keywords = ["crypto", "KBKDF", "KDF"]
categories = ["cryptography", "no-std"]
readme = "README.md"
rust-version = "1.65"

[dependencies]
digest = { version = "0.10", default-features = false, features = ["mac"] }

# divrem can be dropped with MSRV >= 1.73
divrem = "1.0.0"

[dev-dependencies]
hex-literal = "0.2.2"
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
cmac = "0.7"
aes = "0.8"

[features]
std = ["hmac/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
