[package]
name = "kbkdf"
version = "0.1.0-pre.0"
edition = "2024"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustCrypto/KDFs/tree/master/kbkdf"
repository = "https://github.com/RustCrypto/KDFs/"
description = "Key Derivation Using Pseudorandom Function (KBKDF)"
keywords = ["crypto", "KBKDF", "KDF"]
categories = ["cryptography", "no-std"]
readme = "README.md"
rust-version = "1.85"
exclude = ["/tests/*"]

[dependencies]
digest = { version = "0.11.0-rc.4", default-features = false, features = ["mac"] }

[dev-dependencies]
hex-literal = "1"
hex = "0.4"
hmac = { version = "0.13.0-rc.3", default-features = false }
sha2 = { version = "0.11.0-rc.3", default-features = false }
sha1 = { version = "0.11.0-rc.3", default-features = false }
cmac = "0.8.0-rc.3"
aes = "0.9.0-rc.2"

[package.metadata.docs.rs]
all-features = true
