[package]
name = "one-step-kdf"
version = "0.1.0-rc.0"
description = "One-Step Key Derivation Function as defined in NIST SP 800-56C R2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
documentation = "https://docs.rs/one-step-kdf"
repository = "https://github.com/RustCrypto/KDFs"
keywords = ["crypto", "one-step-kdf", "KDF", "NIST"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
digest = "0.11.0-rc.4"

[dev-dependencies]
hex-literal = "1"
sha2 = { version = "0.11.0-rc.3", default-features = false }
