[package]
name = "sp800-108"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustCrypto/KDFs/"
repository = "https://github.com/RustCrypto/KDFs/"
description = "NIST SP 800-108 Key Derivation Functions (KDFs)"
keywords = ["crypto", "NIST SP 800-108", "KDF"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
digest = { version = "0.11.2", default-features = false, features = [ "mac" ]}
generic-array = { version = "1.3.5", default-features = false}

# optional dependencies
kdf = { version = "0.1"}

[dev-dependencies]
blobby = "0.4"
hex-literal = "1"
hex = "0.4"
hmac = { version = "0.13.0", default-features = false}
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.11", default-features = false }
cmac = { version = "0.8.0", default-features = false}
aes = { version = "0.9.0", default-features = false}

[features]
default = ["zeroize"]
zeroize = ["generic-array/zeroize", "digest/zeroize"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
